<resources>
    <string name="app_name">Ares Player</string>
    <string name="play_button">Play</string>
    <string name="rewind_button">Rewind</string>
    <string name="fast_forward_button">Play</string>
    <string name="song_list_button">Songs_list</string>
    <string name="album_list_button">Albums_list</string>
    <string name="home_button">Home</string>
    <string name="album_art_view">Album Art</string>
    <string name="start_time">0.00</string>
    <string name="end_time">3.30</string>
</resources>
