<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_0056"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.android.aresplayer.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true">

            <ImageButton
                android:id="@+id/home_button"
                style="@style/buttons"
                android:contentDescription="@string/album_art_view"
                android:src="@drawable/ic_home" />

            <ImageButton
                android:id="@+id/song_button"
                style="@style/buttons"
                android:contentDescription="@string/song_list_button"
                android:src="@drawable/ic_music_player" />

            <ImageButton
                android:id="@+id/album_button"
                style="@style/buttons"
                android:contentDescription="@string/album_list_button"
                android:src="@drawable/ic_cd" />

            <ImageButton
                android:id="@+id/artist_button"
                style="@style/buttons"
                android:contentDescription="@string/home_button"
                android:src="@drawable/ic_icon" />
        </LinearLayout>


        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/album_art_view"
            android:src="@drawable/capture" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <SeekBar
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:max="100" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/play_button"
                style="@style/buttons"
                android:layout_centerInParent="true"
                android:contentDescription="@string/play_button"
                android:src="@drawable/ic_real_play_button" />

            <ImageButton
                style="@style/buttons"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/play_button"
                android:layout_toRightOf="@+id/play_button"
                android:contentDescription="@string/fast_forward_button"
                android:src="@drawable/ic_fast_forward" />

            <ImageButton
                style="@style/buttons"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/play_button"
                android:layout_toStartOf="@id/play_button"
                android:contentDescription="@string/rewind_button"
                android:src="@drawable/ic_rewind_button_arrows" />


        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
