<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_0056"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageButton
            style="@style/buttons"
            android:id="@+id/home_button"
            android:contentDescription="@string/album_art_view"
            android:src="@drawable/ic_home" />

        <ImageButton
            style="@style/buttons"
            android:id="@+id/song_button"
            android:contentDescription="@string/song_list_button"
            android:src="@drawable/ic_music_player" />

        <ImageButton
            style="@style/buttons"
            android:id="@+id/album_button"
            android:contentDescription="@string/album_list_button"
            android:src="@drawable/ic_cd" />

        <ImageButton
            style="@style/buttons"
            android:id="@+id/artist_button"
            android:contentDescription="@string/home_button"
            android:src="@drawable/ic_icon" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


    </ListView>

</LinearLayout>